[gd_scene load_steps=10 format=3 uid="uid://bbupyh3fpswig"]

[ext_resource type="Script" path="res://settings_menu.gd" id="1_wc3ll"]
[ext_resource type="PackedScene" uid="uid://cgsyv55s3of86" path="res://scrolling_background.tscn" id="2_f8ryy"]
[ext_resource type="Texture2D" uid="uid://c0t85sjjf3s6n" path="res://assets/backgrounds/background_red.png" id="3_i2ytm"]
[ext_resource type="LabelSettings" uid="uid://0mhwhs6306g4" path="res://assets/fonts/menu_font.tres" id="4_5oyqd"]
[ext_resource type="Texture2D" uid="uid://c7a24ave710iq" path="res://assets/gfx/GameImage.png" id="4_ukc6g"]
[ext_resource type="AudioStream" uid="uid://dlemxkelfiipd" path="res://assets/music/Trouble Makers (Loopable).wav" id="6_1jf0m"]

[sub_resource type="SystemFont" id="SystemFont_dwudh"]
font_names = PackedStringArray("Droid Sans")

[sub_resource type="LabelSettings" id="LabelSettings_jnk7w"]
font = SubResource("SystemFont_dwudh")
font_size = 65
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 11
shadow_color = Color(0, 0, 0, 0.360784)
shadow_offset = Vector2(5.13, 2.395)

[sub_resource type="LabelSettings" id="LabelSettings_y4xq8"]
font_size = 32
outline_size = 11
outline_color = Color(0, 0, 0, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wc3ll")

[node name="ScrollingBackground" parent="." instance=ExtResource("2_f8ryy")]
background = ExtResource("3_i2ytm")
scrolling_speed = Vector2(50, 0)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.470588, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 23

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Super Small Ball"
label_settings = SubResource("LabelSettings_jnk7w")
horizontal_alignment = 1

[node name="MainSettings" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 30

[node name="GraphicsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MainSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Graphics"

[node name="SoundsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MainSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Sounds"

[node name="ClearSave" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MainSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Clear Save Data"

[node name="BackButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MainSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Back"

[node name="GraphicsSettings" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 30

[node name="FullscreenButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/GraphicsSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
toggle_mode = true
text = "Fullscreen: "

[node name="AnialiasingButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/GraphicsSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
toggle_mode = true
text = "Anti-aliasing: "

[node name="BackButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/GraphicsSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Back"

[node name="SoundsSettings" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/SoundsSettings"]
layout_mode = 2
text = "Music Volume"
label_settings = ExtResource("4_5oyqd")
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/SoundsSettings"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/SoundsSettings"]
layout_mode = 2
text = "Sound Effects"
label_settings = ExtResource("4_5oyqd")
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/SoundsSettings"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="BackButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/SoundsSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Back"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Created by
Cameron Smith &
Zshandi Krahn"
label_settings = SubResource("LabelSettings_y4xq8")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_ukc6g")
expand_mode = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1jf0m")
volume_db = -6.0
bus = &"Music"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MainSettings/GraphicsButton" to="." method="_on_graphics_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MainSettings/SoundsButton" to="." method="_on_sounds_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MainSettings/ClearSave" to="." method="_on_clear_save_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MainSettings/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/GraphicsSettings/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/GraphicsSettings/AnialiasingButton" to="." method="_on_anialiasing_button_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/GraphicsSettings/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/SoundsSettings/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/SoundsSettings/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/SoundsSettings/BackButton" to="." method="_on_back_button_pressed"]
